# docs/swagger.json
@@ -18,6 +18,15 @@
                     "timeline"
                 ],
                 "summary": "Get the user's recent timeline",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "JWT token",
+                        "name": "token",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -96,6 +105,41 @@
                         "description": "Internal Server Error",
                         "schema": {
                             "$ref": "#/definitions/main.LoginInternalErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/validate-token": {
+            "get": {
+                "description": "Validates your token and returns a 200 OK if it's valid.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Validate your token",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "JWT token",
+                        "name": "token",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/main.ValidateTokenSuccessResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/main.ValidateTokenUnauthorizedResponse"
                         }
                     }
                 }
@@ -234,6 +278,36 @@
             }
         },
         "main.RecentTimelineUnauthorizedResponse": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string",
+                    "example": "Unauthorized"
+                },
+                "success": {
+                    "type": "boolean",
+                    "example": false
+                }
+            }
+        },
+        "main.ValidateTokenSuccessResponse": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string",
+                    "example": ""
+                },
+                "expires": {
+                    "type": "string",
+                    "example": "1620000000"
+                },
+                "success": {
+                    "type": "boolean",
+                    "example": true
+                }
+            }
+        },
+        "main.ValidateTokenUnauthorizedResponse": {
             "type": "object",
             "properties": {
                 "error": {
